# any2api

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  architecture-allowlist.toml  deny.toml  rust-toolchain.toml
app/any2api/: Cargo.toml  build.rs
app/any2api/src/: adapters.rs  admin_auth_adapter.rs  bootstrap.rs  embedded_web.rs  instance_lock.rs  lib.rs  logging_reconciler.rs  main.rs  process.rs  settings.rs  shutdown.rs
app/any2api/src/file_logging/: level_filter.rs  mod.rs  policy.rs  tests.rs  writer.rs  writer_tests.rs
app/any2api/src/shutdown/: finalization.rs  outcome.rs  server.rs  signal.rs  tests.rs  timeouts.rs
app/any2api/web-assets/: boot-theme.js  index.html
app/any2api/web-assets/assets/: index--f7_s5bM.css  index-37q-Sjup.js  index-5lBTcIUQ.css  index-7VstNj-9.js  index-B5HWJdtW.js  index-B7R7x6bq.css  index-BFmLHHP3.js  index-BMi2EAYT.css  index-BQCrtxst.js  index-BTT-B314.js  index-BTqXLKh0.js  index-BboE6TVC.css  index-BdDiDYUw.css  index-BdXQ5SLB.css  index-BguT_hyT.css  index-BhtL_1oc.js  index-Bj0uveL1.js  index-BlbmvXRw.js  index-C2G0iF-F.css  index-C3r6YWhR.js  index-CSmJo3Dk.css  index-CWE4_090.js  index-CWhzuMSv.css  index-Ck03Orem.js  index-CvztVqWT.css  index-Cxp5Kd_I.css  index-D2AYwxbo.js  index-D5u8J17s.js  index-D5zgOilD.css  index-DCQEwHYy.js  index-DGQUUG-2.css  index-DK7vgTgT.css  index-DKQXsvSX.css  index-DTV2fVe0.css  index-DTb8K3qM.js  (+13 more)
crates/domain/: Cargo.toml
crates/domain/src/: credential_concurrency.rs  credential_fingerprint.rs  error.rs  gateway_api_key.rs  gateway_api_key_configuration.rs  gateway_api_key_validation.rs  id.rs  kind.rs  lib.rs  model_name.rs  model_route.rs  model_route_configuration.rs  oauth_account.rs  oauth_account_configuration.rs  oauth_account_tests.rs  provider_base_url.rs  provider_credential.rs  provider_credential_configuration.rs  provider_endpoint.rs  provider_endpoint_configuration.rs  proxy.rs  proxy_address.rs  proxy_authentication.rs  proxy_configuration.rs  request_log.rs  retry_safety.rs  revision.rs  route_target.rs  routing_credential_id.rs  token_usage.rs  upstream_error.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: affinity.rs  anthropic_messages.rs  api.rs  error.rs  json_codec.rs  lib.rs  openai_chat_completions.rs  openai_responses.rs  openai_responses_chat.rs  registry.rs  sse.rs  telemetry.rs
crates/provider/: Cargo.toml
crates/provider/src/: api.rs  api_key.rs  claude.rs  claude_error.rs  claude_oauth.rs  codex.rs  codex_error.rs  codex_oauth.rs  codex_quota.rs  codex_quota_tests.rs  error.rs  http_error.rs  lib.rs  oauth.rs  oauth_quota.rs  oauth_routing.rs  registry.rs  retry_after.rs  secret.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: api.rs  auxiliary_scheduler.rs  auxiliary_scheduler_tests.rs  balancing.rs  balancing_tests.rs  config_command.rs  config_publish_error.rs  configuration_capabilities.rs  credential_auth.rs  credential_runtime.rs  credential_runtime_tests.rs  gateway_api_key_publisher.rs  gateway_api_key_publisher_tests.rs  gateway_api_key_token.rs  lib.rs  logging_reconciler.rs  model_route_publisher_tests.rs  oauth.rs  oauth_tests.rs  process_lifecycle.rs  provider_api_key_secret.rs  provider_credential_test.rs  provider_credential_test_tests.rs  provider_model_catalog.rs  provider_oauth.rs  provider_oauth2_secret.rs  provider_oauth_tests.rs  proxy_auth.rs  proxy_password_secret.rs  proxy_test.rs  public_request.rs  publish_task.rs  published_snapshot.rs  published_snapshot_tests.rs  publisher.rs  publisher_tests.rs  queue.rs  registry.rs  request_telemetry_tests.rs  route_candidates.rs  (+6 more)
crates/server/: Cargo.toml
crates/server/src/: api.rs  embedded_web.rs  health.rs  lib.rs  request_lifecycle.rs  router.rs  state.rs  web_assets.rs
crates/storage/: Cargo.toml
crates/storage/src/: admin_credential_repository.rs  admin_credential_repository_tests.rs  api.rs  configuration.rs  configuration_repository.rs  error.rs  gateway_api_key_mutation.rs  gateway_api_key_repository.rs  gateway_api_key_repository_tests.rs  gateway_api_key_rows.rs  gateway_api_key_token.rs  gateway_api_key_usage_repository.rs  gateway_api_key_verifier.rs  gateway_api_key_writes.rs  lib.rs  migration.rs  migration_tests.rs  model_route_mutation.rs  model_route_replacement.rs  model_route_repository.rs  model_route_repository_tests.rs  model_route_rows.rs  oauth_account_document.rs  oauth_account_material.rs  oauth_account_mutation.rs  oauth_account_repository.rs  oauth_account_repository_tests.rs  oauth_account_rows.rs  oauth_account_writes.rs  provider_api_key.rs  provider_credential_models_tests.rs  provider_credential_mutation.rs  provider_credential_repository.rs  provider_credential_repository_tests.rs  provider_credential_rows.rs  provider_credential_secret_material.rs  provider_credential_secret_mutation.rs  provider_credential_writes.rs  provider_endpoint_mutation.rs  provider_endpoint_repository.rs  (+20 more)
crates/transport/: Cargo.toml
crates/transport/src/: api.rs  client_cache.rs  error.rs  http_connect_tests.rs  lib.rs  origin_resolution.rs  pinned_client.rs  pinned_connector.rs  pinned_tls.rs  proxy_auth_tests.rs  proxy_credentials.rs  proxy_tcp_connector.rs  proxy_url.rs  request_body.rs  reqwest_manager.rs  reqwest_manager_tests.rs  reqwest_timeout_tests.rs  strict_ssrf_tests.rs  transport_failure_scope_tests.rs
tests/contract/: Cargo.toml
tests/contract/src/: lib.rs
tests/contract/tests/: admin_auth.rs  balancing_admin.rs  gateway_api_key_admin.rs  model_route_admin.rs  oauth_account_admin.rs  oauth_admin.rs  oauth_quota.rs  oauth_refresh.rs  oauth_routing.rs  provider_credential_admin.rs  provider_endpoint_admin.rs  proxy_admin.rs  public_count_tokens.rs  public_json_proxy.rs  public_reliability.rs  public_sse.rs  registered_adapters.rs  runtime_concurrency.rs  runtime_queue.rs  secret_vault.rs  settings_admin.rs  stage0_smoke.rs  transport_manager.rs
xtask/: Cargo.toml
xtask/src/: architecture.rs  main.rs
xtask/src/architecture/: allowlist.rs  dependencies.rs  migrations.rs  source_size.rs
(+506 files in other folders)
