[workspace]
resolver = "3"
members = [
    "crates/domain",
    "crates/protocol",
    "crates/provider",
    "crates/transport",
    "crates/runtime",
    "crates/storage",
    "crates/server",
    "app/any2api",
    "tests/contract",
    "xtask",
]
default-members = ["app/any2api"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
publish = false

[workspace.dependencies]
anyhow = "1.0.103"
arc-swap = "1.9.2"
async-trait = "0.1.89"
axum = "0.8.9"
bytes = "1.12.1"
cargo_metadata = "0.23.1"
futures-core = "0.3.32"
http = "1.4.2"
http-body-util = "0.1.4"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
tempfile = "3.23.0"
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["formatting", "parsing"] }
tokei = { version = "14.0.0", default-features = false }
tokio = { version = "1.53.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync"] }
toml = "1.1.3"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
url = "2.5.8"
uuid = { version = "1.24.0", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
