[workspace]
resolver = "3"
members = [
    "crates/domain",
    "crates/protocol",
    "crates/provider",
    "crates/transport",
    "crates/runtime",
    "crates/storage",
    "crates/server",
    "app/any2api",
    "tests/contract",
    "xtask",
]
default-members = ["app/any2api"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
publish = false

[workspace.dependencies]
anyhow = "1.0.103"
argon2 = "0.5.3"
arc-swap = "1.9.2"
async-trait = "0.1.89"
axum = "0.8.9"
base64 = "0.22.1"
bytes = "1.12.1"
cargo_metadata = "0.23.1"
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc"] }
futures-core = "0.3.32"
futures-util = "0.3.32"
fs2 = "0.4.3"
getrandom = "0.4.3"
hmac = "0.12.1"
http = "1.4.2"
http-body = "1.0.1"
http-body-util = "0.1.4"
hyper = { version = "1.10.1", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27.9", default-features = false, features = ["http1", "http2", "native-tokio", "ring", "tls12"] }
hyper-util = { version = "0.1.20", features = ["client-legacy", "client-proxy", "http1", "http2", "tokio"] }
ipnet = "2.11.0"
rcgen = { version = "0.13.2", default-features = false, features = ["ring"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls-native-roots", "socks", "stream"] }
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std", "tls12"] }
rustls-native-certs = "0.8.4"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
subtle = "2.6.1"
tempfile = "3.23.0"
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["formatting", "parsing"] }
tokei = { version = "14.0.0", default-features = false }
tokio = { version = "1.53.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
toml = "1.1.3"
tower = { version = "0.5.3", features = ["util"] }
tower-service = "0.3.3"
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
url = "2.5.8"
uuid = { version = "1.24.0", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
