[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
serde.workspace = true
sha2.workspace = true
time.workspace = true
tokei.workspace = true
toml.workspace = true

[lints]
workspace = true
