[package]
name = "any2api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
any2api-domain = { path = "../../crates/domain" }
any2api-protocol = { path = "../../crates/protocol" }
any2api-provider = { path = "../../crates/provider" }
any2api-runtime = { path = "../../crates/runtime" }
any2api-server = { path = "../../crates/server" }
any2api-storage = { path = "../../crates/storage" }
any2api-transport = { path = "../../crates/transport" }
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
fs2.workspace = true
ipnet.workspace = true
secrecy.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
