[package]
name = "any2api-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
any2api-domain = { path = "../domain" }
bytes.workspace = true
http.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
