[package]
name = "any2api-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
any2api-domain = { path = "../domain" }
any2api-provider = { path = "../provider" }
any2api-storage = { path = "../storage" }
arc-swap.workspace = true
base64.workspace = true
getrandom.workspace = true
secrecy.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
