[package]
name = "any2api-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
any2api-domain = { path = "../domain" }
any2api-protocol = { path = "../protocol" }
any2api-provider = { path = "../provider" }
any2api-storage = { path = "../storage" }
any2api-transport = { path = "../transport" }
arc-swap.workspace = true
base64.workspace = true
bytes.workspace = true
futures-util.workspace = true
getrandom.workspace = true
http.workspace = true
secrecy.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
