[package]
name = "any2api-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
any2api-domain = { path = "../domain" }
any2api-runtime = { path = "../runtime" }
argon2.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
getrandom.workspace = true
ipnet.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true

[lints]
workspace = true
