[package]
name = "any2api-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
any2api-domain = { path = "../domain" }
async-trait.workspace = true
bytes.workspace = true
futures-core.workspace = true
futures-util.workspace = true
http.workspace = true
http-body.workspace = true
reqwest.workspace = true
secrecy.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
rcgen.workspace = true
rustls.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true

[lints]
workspace = true
