[package]
name = "any2api-contract-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
any2api-runtime = { path = "../../crates/runtime" }
any2api-server = { path = "../../crates/server" }
any2api-storage = { path = "../../crates/storage" }
axum.workspace = true
http-body-util.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
