[package]
name = "any2api-contract-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
any2api = { path = "../../app/any2api" }
any2api-domain = { path = "../../crates/domain" }
any2api-protocol = { path = "../../crates/protocol" }
any2api-provider = { path = "../../crates/provider" }
any2api-runtime = { path = "../../crates/runtime" }
any2api-server = { path = "../../crates/server" }
any2api-storage = { path = "../../crates/storage" }
any2api-transport = { path = "../../crates/transport" }
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
serde_json.workspace = true
secrecy.workspace = true
tempfile.workspace = true
tokio.workspace = true
tower.workspace = true
url.workspace = true

[lints]
workspace = true
